--- a/apps/data-service/wrangler.jsonc
+++ b/apps/data-service/wrangler.jsonc
@@ -9,6 +9,20 @@
 	"compatibility_date": "2025-06-17",
 	"compatibility_flags": ["nodejs_compat"],
 	"observability": {
-		"enabled": true,
+		"enabled": true
 	},
+	"d1_databases": [
+		{
+			"binding": "DB",
+			"database_id": "dda783a3-36fa-4ee7-8c37-216b90718aaa",
+			"experimental_remote": true
+		}
+	],
+	"kv_namespaces": [
+		{
+			"binding": "CACHE",
+			"id": "8de2bf0478814265af77a8efb9d5297d",
+			"experimental_remote": true
+		}
+	]
 }
