--- a/apps/data-service/wrangler.jsonc
+++ b/apps/data-service/wrangler.jsonc
@@ -68,12 +68,20 @@
 				"name": "EVALUATION_SCHEDULER",
 				"class_name": "EvaluationScheduler",
 			},
+			{
+				"class_name": "LinkClickTracker",
+				"name": "LINK_CLICK_TRACKER",
+			},
 		],
 	},
 	"migrations": [
 		{
 			"tag": "v1",
 			"new_classes": ["EvaluationScheduler"],
+		},
+		{
+			"tag": "v2",
+			"new_sqlite_classes": ["LinkClickTracker"],
 		},
 	],
 }
